[gd_scene load_steps=8 format=3 uid="uid://b6hkoguuy0d14"]

[ext_resource type="Script" uid="uid://bdnrifawjngec" path="res://Scripts/enemy_boss.gd" id="1_03pj2"]
[ext_resource type="Texture2D" uid="uid://d2jndrb3yg1np" path="res://Assets/Sprites/Boss_states.png" id="2_648fd"]
[ext_resource type="Script" uid="uid://chrkfn7iiy87r" path="res://Scenes/Dash.gd" id="3_03pj2"]
[ext_resource type="PackedScene" uid="uid://b2d0s1b8e5pql" path="res://Scenes/ElementState.tscn" id="4_03pj2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_03pj2"]
size = Vector2(177.789, 131.111)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w5ahq"]
size = Vector2(65, 126)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_i713y"]
radius = 61.6667
height = 210.667

[node name="Boss" type="CharacterBody2D" node_paths=PackedStringArray("wind", "fire", "rock", "ice") groups=["Enemies"]]
scale = Vector2(3, 3)
script = ExtResource("1_03pj2")
wind = NodePath("ElementState/Wind")
fire = NodePath("ElementState/Fire")
rock = NodePath("ElementState/Rock")
ice = NodePath("ElementState/Ice")

[node name="MovingSpr" type="Sprite2D" parent="."]
position = Vector2(42, 63.6667)
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_648fd")
hframes = 4
vframes = 2

[node name="MovingHBox" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(41, 107)
scale = Vector2(0.325806, 0.22844)
shape = SubResource("RectangleShape2D_03pj2")

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(42.1667, 60.3333)
shape = SubResource("RectangleShape2D_w5ahq")

[node name="AttackingSpr" type="Sprite2D" parent="." node_paths=PackedStringArray("boss")]
visible = false
position = Vector2(88, 49)
texture = ExtResource("2_648fd")
hframes = 4
vframes = 2
frame = 4
script = ExtResource("3_03pj2")
boss = NodePath("..")

[node name="Area2D" type="Area2D" parent="AttackingSpr"]
position = Vector2(51.6667, 0.333336)
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackingSpr/Area2D"]
position = Vector2(-49.3333, 4)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_i713y")

[node name="HoverDur" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="DashDur" type="Timer" parent="."]
wait_time = 5.0

[node name="ElementState" parent="." instance=ExtResource("4_03pj2")]

[node name="Wind" parent="ElementState" index="0" node_paths=PackedStringArray("boss")]
boss = NodePath("../..")

[node name="Fire" parent="ElementState" index="1" node_paths=PackedStringArray("boss")]
boss = NodePath("../..")

[node name="Rock" parent="ElementState" index="2" node_paths=PackedStringArray("boss")]
boss = NodePath("../..")

[node name="Ice" parent="ElementState" index="3" node_paths=PackedStringArray("boss")]
boss = NodePath("../..")

[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="timeout" from="HoverDur" to="." method="_on_hover_dur_timeout"]
[connection signal="timeout" from="DashDur" to="." method="_on_dash_dur_timeout"]

[editable path="ElementState"]
